--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -207,7 +207,7 @@
                             <div class="bg-white float-right">
                                 <button mat-icon-button *ngIf="!viewonly" (click)="removeImage(url,i)" class="close-button float-right absolute right-4 top-2 bg-white" style="border: green solid 2px;" [mat-dialog-close]="true">
                                     <!-- X -->
-                                    <mat-icon class="close-icon w-12 h-12" color="warn">close</mat-icon>
+                                    <mat-icon class="close-icon w-12 h-12 text-red-500" color="warn">close</mat-icon>
                                 </button>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                                 <div class="bg-white float-right">
                                     <button mat-icon-button *ngIf="!viewonly" (click)="removeVideo(url,i)" class="close-button float-right absolute right-4 top-2 bg-red" style="border: green solid 2px;" [mat-dialog-close]="true">
                                         <!-- X -->
-                                        <mat-icon class="close-icon text-white w-12 h-12" color="warn">close</mat-icon>
+                                        <mat-icon class="close-icon text-white w-12 h-12 text-red-500" color="warn">close</mat-icon>
                                     </button>
                                 </div>
                             </div>
