--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -1,63 +1,105 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-10 mt-4">Search for Loan Utilization</div>
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight ">Search for Loan Utilization</div>
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
-        [formGroup]="loanutilizationSearch">
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4" *ngIf="!isUserAdmin">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label>Zone</mat-label>
-                    <input matInput formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off">
-                    <!--  <mat-error *ngIf="hasError('loanutilizationName', 'required')">loanutilizationName <strong>required</strong></mat-error>-->
-                </mat-form-field>
+    <div [formGroup]="loanutilizationSearch">
+        <div class="row mt-4">
+
+
+            <div class="col-md-3 col-sm-12">
+                <div class="col-md-12 kt-margin-bottom-10-mobile mr-4" *ngIf="!isUserAdmin">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label>Zone</mat-label>
+                        <input matInput formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off">
+                        <!--  <mat-error *ngIf="hasError('loanutilizationName', 'required')">loanutilizationName <strong>required</strong></mat-error>-->
+                    </mat-form-field>
+                </div>
+    <!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4">-->
+    <!--&lt;!&ndash;             zone&ndash;&gt;-->
+    <!--            </div>-->
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+    
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
+                            <mat-option [value]="SelectedZones?.ZoneId">
+                                {{SelectedZones?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
+                        <mat-label class="customMatLabel">Zone</mat-label>
+                        <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
+                                    (selectionChange)="changeZone($event)">
+                            <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                        [disabled]="disable_zone">
+                                {{zone?.ZoneName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+    
+    
+                </div>
+
             </div>
-<!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4">-->
-<!--&lt;!&ndash;             zone&ndash;&gt;-->
-<!--            </div>-->
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
-                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
-                    <mat-label class="customMatLabel">Zone</mat-label>
-                    <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
-                        <mat-option [value]="SelectedZones?.ZoneId">
-                            {{SelectedZones?.ZoneName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
-                    <mat-label class="customMatLabel">Zone</mat-label>
-                    <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
-                                (selectionChange)="changeZone($event)">
-                        <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                    [disabled]="disable_zone">
-                            {{zone?.ZoneName}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-
+            <div class="col-md-3 col-sm-12">
+                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                        <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                                    (selectionChange)="changeBranch($event)"
+                                    *ngIf="!single_branch">
+                            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                            >
+                                {{branch?.Name}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                                    *ngIf="single_branch">
+                            <mat-option [value]="SelectedBranches?.BranchCode"
+                            >
+                                {{SelectedBranches?.Name}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
 
             </div>
 
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-                    <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                (selectionChange)="changeBranch($event)"
-                                *ngIf="!single_branch">
-                        <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
-                        >
-                            {{branch?.Name}}
-                        </mat-option>
-                    </mat-select>
-                    <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
-                                *ngIf="single_branch">
-                        <mat-option [value]="SelectedBranches?.BranchCode"
-                        >
-                            {{SelectedBranches?.Name}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
+            <div class="col-md-3 col-sm-12">
+
+                <div class="col-md-12 kt-margin-bottom-10-mobile mr-10">
+                    <!-- <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                  <mat-label>loanutilization Name</mat-label>
+                  <input matInput formControlName="loanutilizationName" placeholder="Enter loanutilization Name" maxlength="100" autocomplete="off" appAlphabetOnly>
+                </mat-form-field> -->
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">From</mat-label>
+                        <input matInput [matDatepicker]="picker" placeholder="ddMMyyyy" autocomplete="off"
+                            formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()" autocomplete="off">
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
+
             </div>
+
+            <div class="col-md-3 col-sm-12">
+
+                <div class="col-md-12 kt-margin-bottom-10-mobile mr-10">
+                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                        <mat-label class="customMatLabel">To</mat-label>
+                        <input matInput [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
+                            [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()" autocomplete="off">
+                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                        <mat-datepicker #picker1></mat-datepicker>
+                    </mat-form-field>
+                </div>
+            </div>
+        </div>
+            
+
+
 
 <!--            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
 
@@ -101,56 +143,45 @@
 <!--                </mat-form-field>-->
 <!--            </div>-->
 
-            <div class="col-md-2 kt-margin-bottom-10-mobile mr-10">
-                <!-- <mat-form-field class="mat-form-field-fluid" appearance="outline">
-              <mat-label>loanutilization Name</mat-label>
-              <input matInput formControlName="loanutilizationName" placeholder="Enter loanutilization Name" maxlength="100" autocomplete="off" appAlphabetOnly>
-            </mat-form-field> -->
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label class="customMatLabel">From</mat-label>
-                    <input matInput [matDatepicker]="picker" placeholder="ddMMyyyy" autocomplete="off"
-                        formControlName="FromDate" [max]="getToday()" (dateChange)="setFromDate()" autocomplete="off">
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-            </div>
-            <div class="col-md-2 kt-margin-bottom-10-mobile mr-10">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label class="customMatLabel">To</mat-label>
-                    <input matInput [matDatepicker]="picker1" placeholder="ddMMyyyy" formControlName="ToDate"
-                        [min]="minDate" [max]="getTodayForTo()" (dateChange)="setToDate()" autocomplete="off">
-                    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                    <mat-datepicker #picker1></mat-datepicker>
-                </mat-form-field>
-            </div>
 
-            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label>LoanCaseNo</mat-label>
-                    <input matInput formControlName="LoanCaseNo" placeholder="Enter LoanCaseNo" maxlength="100"
-                        autocomplete="off">
-                </mat-form-field>
-            </div>
+<div class="row">
 
-            <div *ngIf="loanutilizationStatusLov" class="col-md-2 kt-margin-bottom-10-mobile mr-4">
-                <mat-form-field class="mat-form-field-fluid" appearance="outline">
-                    <mat-label>Select loanutilization Status</mat-label>
-                    <mat-select formControlName="loanutilizationStatus">
-                        <mat-option value="">
-                            Select
-                        </mat-option>
-                        <mat-option *ngFor="let obj of loanutilizationStatusLov.LOVs" [value]="obj.Value">
-                            {{obj.Name}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
+    <div class="col-md-3 col-sm-12">
+        <div class="col-md-12 kt-margin-bottom-10-mobile mr-4">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                <mat-label>LoanCaseNo</mat-label>
+                <input matInput formControlName="LoanCaseNo" placeholder="Enter LoanCaseNo" maxlength="100"
+                    autocomplete="off">
+            </mat-form-field>
+        </div>
+    </div>
 
-            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4 mb-2">
-                <button (click)="searchloanutilization()" class="ml-4" mat-flat-button [color]="'primary'">
-                    <span class="ml-2 mr-1">Find</span>
-                </button>
-            </div>
+    <div class="col-md-3 col-sm-12">
+
+        <div *ngIf="loanutilizationStatusLov" class="col-md-12 kt-margin-bottom-10-mobile">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                <mat-label>Select loanutilization Status</mat-label>
+                <mat-select formControlName="loanutilizationStatus">
+                    <mat-option value="">
+                        Select
+                    </mat-option>
+                    <mat-option *ngFor="let obj of loanutilizationStatusLov.LOVs" [value]="obj.Value">
+                        {{obj.Name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-4  mb-2">
+            <button (click)="searchloanutilization()" mat-flat-button [color]="'primary'">
+                <span class="ml-2 mr-1">Find</span>
+            </button>
+        </div>
+    </div>
+
+
+
+
 
         </div>
     </div>
