--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -3,7 +3,8 @@
   <!-- Header -->
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
     [formGroup]="loanutilizationSearch">
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+    <div class="row"> 
+      <div class="col-md-3 col-sm-12">
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
             <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
@@ -25,7 +26,9 @@
                 </mat-select>
             </mat-form-field>
         </div>
+      </div>
 
+      <div class="col-md-3 col-sm-12">
 
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
             <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -47,7 +50,7 @@
                 </mat-select>
             </mat-form-field>
         </div>
-
+      </div>
 
 <!--      <div *ngIf="circle && isBM" class="col-md-2 kt-margin-bottom-10-mobile mr-20">-->
 <!--        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
@@ -76,7 +79,7 @@
 <!--                        </mat-form-field>-->
 <!--                    </div>-->
 
-
+<div class="col-md-3 col-sm-12">
       <div class="col-md-2 kt-margin-bottom-10-mobile mr-20">
         <mat-form-field class="mat-form-field-fluid" appearance="outline">
           <mat-label>LoanCaseNo</mat-label>
@@ -84,7 +87,8 @@
             autocomplete="off">
         </mat-form-field>
       </div>
-
+    </div>
+    <div class="col-md-3 col-sm-12">
       <div *ngIf="loanutilizationStatusLov" class="col-md-2 kt-margin-bottom-10-mobile mr-20">
         <mat-form-field class="mat-form-field-fluid" appearance="outline">
           <mat-label>Select loanutilization Status</mat-label>
@@ -99,15 +103,20 @@
         </mat-form-field>
       </div>
 
-      <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4 mr-20">
-        <button (click)="searchloanutilization()" class="ml-4" mat-flat-button [color]="'primary'">
-          <span class="ml-2 mr-1">Find</span>
-        </button>
-      </div>
 
+</div>
+    </div>
+
+  </div>
+  <div class="row px-6">
+    <div class="col-md-3 col-sm-12">
+    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4 mr-20">
+      <button (click)="searchloanutilization()" class="ml-4" mat-flat-button [color]="'primary'">
+        <span class="ml-2 mr-1">Find</span>
+      </button>
     </div>
   </div>
-
+  </div>
   <!-- Main -->
   <div class="flex flex-auto overflow-scroll mx-12">
 
