--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -81,3 +81,7 @@ select:disabled {
 body.light .mat-select-disabled .mat-select-value, body .light .mat-select-disabled .mat-select-value {
   color: black;
 }
+
+.text-yellow{
+  color:#ECBD00;
+}
