--- a/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
+++ b/src/app/modules/loan/cl-search-loan/cl-search-loan.component.html
@@ -1,22 +1,24 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-  <div class="text-4xl font-extrabold tracking-tight mx-10 mt-4">Loan List</div>
+<div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="text-4xl font-extrabold tracking-tight">Loan List</div>
   <!-- Header -->
-  <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4 px-6 md:px-8 "
+  <div
   [formGroup]="loanSearch">
-  <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-    
+  <div class="row">
+    <div class="col-lg-3 col-sm-12">
     <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
       <mat-label>Application Date(ddMMyyyy)</mat-label>
       <input readonly="readonly" matInput [matDatepicker]="picker3" placeholder="ddMMyyyy" autocomplete="off" formControlName="Appdt">
       <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
       <mat-datepicker #picker3></mat-datepicker>
     </mat-form-field>
-
+    </div>
+    <div class="col-lg-3 col-sm-12">
     <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
       <mat-label>LA File/Booklet#</mat-label>
       <input matInput placeholder="Enter >LA File/Booklet" formControlName="AppNo">
     </mat-form-field>
-
+  </div>
+  <div class="col-lg-3 col-sm-12">
     <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
       <mat-label>Status</mat-label>
       <mat-select formControlName="Status">
@@ -29,23 +31,28 @@
         </mat-option>
       </mat-select>
     </mat-form-field>
-
+  </div>
+  <div class="col-lg-3 col-sm-12">
     <mat-form-field class="mat-form-field-fluid mr-4" appearance="outline">
       <mat-label>Loan Case#</mat-label>
       <input matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
     </mat-form-field>
 
-    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4 mb-2">
-      <button (click)="searchLoan()" class="ml-4" mat-flat-button [color]="'primary'">
-        <span class="ml-2 mr-1">Search</span>
-      </button>
-    </div>
-
+    
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-3 col-sm-12">
+  <div class="flex flex-shrink-0 items-center mt-2 mb-2">
+    <button (click)="searchLoan()" mat-flat-button [color]="'primary'">
+      <span class="ml-2 mr-1">Search</span>
+    </button>
+  </div>
 </div>
   </div>
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-y-scroll mx-10">
+  <div class="flex flex-auto overflow-y-scroll">
 
     <!-- Products list -->
     <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
