--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -1,25 +1,19 @@
 <div>
-    <div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
-        <div class="text-4xl font-extrabold tracking-tight px-2">NDC Search List</div>
+    <div class=" px-10 pt-4 sm:absolute sm:inset-0   overflow-y-scroll overflow-x-scroll bg-card dark:bg-transparent">
+        <div class="text-4xl font-extrabold tracking-tight">NDC Search List</div>
 
         <!-- Header -->
-        <form [formGroup]="ndcForm" class="kt-form kt-form--group-seperator-dashed">
-            <div class="kt-form">
-              
-                <div class="kt-portlet__body">
+        <form [formGroup]="ndcForm">
                 <!-- <div class="kt-portlet__body-progress">
                   <mat-spinner [diameter]="20"></mat-spinner>
                 </div>
                 <kt-alert *ngIf="hasFormErrors" type="warn" [duration]="30000" [showCloseButton]="true" (close)="onAlertClose($event)">
                   Please enter valid Input
                 </kt-alert> -->
+                    <div class="row">
     
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="form-group kt-form__group row">
-    
-                      <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                                <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                      <div class="col-lg-4">
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                   <mat-label class="customMatLabel">Zone</mat-label>
                                   <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" disabled="true">
                                     <mat-option [value]="SelectedZone.ZoneId">
@@ -29,8 +23,8 @@
                                 </mat-form-field>
                         </div>
     
-                        <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <div class="col-lg-4 ">
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                               <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                               <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" disabled="true">
                                 <mat-option [value]="SelectedBranch.BranchCode">
@@ -40,7 +34,7 @@
                             </mat-form-field>
                         </div>
     
-                        <div class="col-lg-2 kt-margin-bottom-20-mobile" *ngIf="!hide">
+                        <!-- <div class="col-lg-2 " *ngIf="!hide">
                           <mat-form-field class="mat-form-field-fluid" appearance="outline">
                             <mat-label class="customMatLabel">Circle</mat-label>
                             <mat-select formControlName="CircleId">
@@ -49,11 +43,11 @@
                               </mat-option>                                
                             </mat-select>
                           </mat-form-field>
-                      </div>
+                      </div> -->
     
     
-                      <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                      <div class="col-lg-4 ">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                           <mat-label class="customMatLabel">Cnic</mat-label>
                           <input matInput placeholder="Enter Cnic" formControlName="Cnic" appNumberOnly maxlength="13" autocomplete="off" />
                         </mat-form-field>
@@ -68,89 +62,94 @@
                       </div>
                     </div>
     
-                  </div>
-                </div>
-    
+          </form>
+
+          <div class="row py-4">
+            <div class="col-lg-12">
+              <div class="mat-table__wrapper" >
+                <mat-table class="lmat-elevation-z8"
+                           [dataSource]="request_data_source | paginate: {id: 'ndcReq',itemsPerPage: pageSize, currentPage: pageIndex, totalItems: ndcLength}">
+                  <ng-container matColumnDef="serialNumber">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Sr #</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request">{{request.NDCId}}</mat-cell>
+                  </ng-container>
+                  <ng-container matColumnDef="customer_cnic">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
+                    </mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
+                  </ng-container>
+                  <ng-container matColumnDef="name">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span></mat-cell>
+                  </ng-container>
+        
+                  <ng-container matColumnDef="current_status">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Current Status</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Status}}</span></mat-cell>
+                  </ng-container>
+        
+                  <ng-container matColumnDef="last_status">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Last Action</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.LastStatus}}</span></mat-cell>
+                  </ng-container>
+        
+                  <ng-container matColumnDef="next_action_by">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Next Action By</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.ApprovalPendingWith}}</span></mat-cell>
+                  </ng-container>
+        
+                  <ng-container matColumnDef="request_by">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested By</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Ppno}}</span></mat-cell>
+                  </ng-container>
+        
+                  <ng-container matColumnDef="request_on">
+                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested On</mat-header-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span></mat-cell>
+                  </ng-container>
+        
+                  <ng-container matColumnDef="actions">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let request">
+                      <button mat-icon-button color="primary" (click)="downloadFile(request.Cnic,request.NDCId)">
+                        <mat-icon title="download">file_download</mat-icon>
+                      </button>&nbsp;
+                    </mat-cell>
+                  </ng-container>
+        
+                  <mat-header-row *matHeaderRowDef="ndc_requests_displayed_columns;sticky:true;"
+                                  class="table-header-background"></mat-header-row>
+        
+                  <mat-row *matRowDef="let request; columns: ndc_requests_displayed_columns"></mat-row>
+                </mat-table>
+                <div class="mat-table__message" *ngIf="!loading && request_data_source.data?.length==0">No records found</div>
+                <!-- Message for empty data  -->
+                <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+              </div>
+
+              <div class="row py-4">
+                <div class="col-lg-12">
+        
+              <div class="mat-select" style="padding:5px;">
+                <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
+                Items per page:
+                <mat-select display="inline" [(value)]="pageSize" (valueChange)="paginateRequest(1,$event)" style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
+                  <mat-option [value]="5">5</mat-option>
+                  <mat-option [value]="10">10</mat-option>
+                  <mat-option [value]="25">25</mat-option>
+                  <mat-option [value]="50">50</mat-option>
+                </mat-select>
+                <button (click)="paginateRequest(1)">First</button>
+                <pagination-controls id= "ndcReq" display="inline" (pageChange)="paginateRequest($event)" style="display: inline-block;"></pagination-controls>
+                <button (click)="paginateRequest(Math.ceil(ndcLength/pageSize))">Last</button>
+                <p style="float:right;">Total <b>{{ndcLength}}</b> items</p>
               </div>
             </div>
-          </form>
-    
-          <div class="mat-table__wrapper" [style.maxHeight]="gridHeight">
-            <mat-table class="lmat-elevation-z8"
-                       [dataSource]="request_data_source | paginate: {id: 'ndcReq',itemsPerPage: pageSize, currentPage: pageIndex, totalItems: ndcLength}">
-              <ng-container matColumnDef="serialNumber">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Sr #</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request">{{request.NDCId}}</mat-cell>
-              </ng-container>
-              <ng-container matColumnDef="customer_cnic">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
-                </mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
-              </ng-container>
-              <ng-container matColumnDef="name">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span></mat-cell>
-              </ng-container>
-    
-              <ng-container matColumnDef="current_status">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Current Status</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Status}}</span></mat-cell>
-              </ng-container>
-    
-              <ng-container matColumnDef="last_status">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Last Action</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.LastStatus}}</span></mat-cell>
-              </ng-container>
-    
-              <ng-container matColumnDef="next_action_by">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Next Action By</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.ApprovalPendingWith}}</span></mat-cell>
-              </ng-container>
-    
-              <ng-container matColumnDef="request_by">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested By</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Ppno}}</span></mat-cell>
-              </ng-container>
-    
-              <ng-container matColumnDef="request_on">
-                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Requested On</mat-header-cell>
-                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span></mat-cell>
-              </ng-container>
-    
-              <ng-container matColumnDef="actions">
-                <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                <mat-cell *matCellDef="let request">
-                  <button mat-icon-button color="primary" (click)="downloadFile(request.Cnic,request.NDCId)">
-                    <mat-icon title="download">file_download</mat-icon>
-                  </button>&nbsp;
-                </mat-cell>
-              </ng-container>
-    
-              <mat-header-row *matHeaderRowDef="ndc_requests_displayed_columns;sticky:true;"
-                              class="table-header-background"></mat-header-row>
-    
-              <mat-row *matRowDef="let request; columns: ndc_requests_displayed_columns"></mat-row>
-            </mat-table>
-            <div class="mat-table__message" *ngIf="!loading && request_data_source.data?.length==0">No records found</div>
-            <!-- Message for empty data  -->
-            <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+              </div>
+            </div>
           </div>
     
-          <div class="mat-select" style="padding:5px;">
-            <!-- This mat select is customized, not a part of Ngx Paginator, used for selected items per page -->
-            Items per page:
-            <mat-select display="inline" [(value)]="pageSize" (valueChange)="paginateRequest(1,$event)" style="width: 50px; margin-left: 15px; display: inline-block; margin-right: 10px;">
-              <mat-option [value]="5">5</mat-option>
-              <mat-option [value]="10">10</mat-option>
-              <mat-option [value]="25">25</mat-option>
-              <mat-option [value]="50">50</mat-option>
-            </mat-select>
-            <button (click)="paginateRequest(1)">First</button>
-            <pagination-controls id= "ndcReq" display="inline" (pageChange)="paginateRequest($event)" style="display: inline-block;"></pagination-controls>
-            <button (click)="paginateRequest(Math.ceil(ndcLength/pageSize))">Last</button>
-            <p style="float:right;">Total <b>{{ndcLength}}</b> items</p>
-    
-          </div>
+
 
 
 
@@ -160,7 +159,7 @@
         <br>
 
 
-        <div class="mat-table__wrapper " [style.maxHeight]="gridHeight">
+        <div class="mat-table__wrapper " >
             <mat-table class="lmat-elevation-z8"
                        [dataSource]="pending_requests_data_source | paginate: {id:'pendingReq', itemsPerPage: pageSize, currentPage: pageIndexPending, totalItems: pendingLength}">
               <ng-container matColumnDef="customer_cnic">
