--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -190,7 +190,7 @@
     <div class="flex flex-auto overflow-scroll">
 
         <!-- Products list -->
-        <div class="flex flex-auto overflow-scroll mx-12" style="flex-direction: column;">
+        <div class="flex flex-auto overflow-scroll" style="flex-direction: column;">
             <div class="flex flex-col flex-auto sm:mb-18 overflow-hidden sm:overflow-y-auto">
                 <mat-table class="lmat-elevation-z8"
                            #table
