--- a/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
+++ b/src/app/modules/loan-utilization/loan-utilization/loan-utilization.component.html
@@ -151,7 +151,7 @@
             </mat-tab-group>
         </div>
         <div *ngIf="DisbursementsRecoveries">
-            <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
+            <div class="kt-portlet__head kt-portlet__head__custom" >
                 <div class="kt-portlet__head-label">
                     <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Disbursements/Recoveries</div>
                 </div>
@@ -189,7 +189,7 @@
             </div>
         </div>
         <!-- images -->
-        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="width: 100%">
+        <div class="kt-portlet__head kt-portlet__head__custom"style="width: 100%">
             <div class="kt-portlet__head-label">
                 <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Attach Images</div>
                 <mat-error *ngIf="hasError('file', 'required')">Must Contain a Image<strong>required</strong>
@@ -225,7 +225,7 @@
 
         </div>
         <!--        Video-->
-            <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
+            <div class="kt-portlet__head kt-portlet__head__custom" >
                 <div class="kt-portlet__head-label">
                     <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Attach Videos</div>
                     <mat-error *ngIf="hasError('fileV', 'required')">Must Contain a Video<strong>required</strong>
@@ -301,3 +301,4 @@
 </div>
 
 
+</div>
